  - Added compile option for skipping prompts.

version 0.3:
  - Added overflow-buffer as last resort to allocation problem (slapin's idea)
  - Cleaned up treo code (removed all #ifdefs)
  - Removed kernel relocation for speed and reliability (suggested by phire)
  - Added simple USB console.

version 0.2: 
  - Fixed booting on Palm T|T3 (Marek Vasut)

version 0.1:
  - Initial release