@@ -1,3 +1,3 @@
 Int32 search_image(char *name, char *loc, UInt16 loc_len, UInt32 *size);
 Int32 load_image(char *name, UInt32 size, UInt16 vol_ref, void *buffer);
-
+int search_file(char *name, UInt16 *vol_ref, UInt32 *size);
