@@ -2,7 +2,7 @@ CC = m68k-palmos-gcc
 CFLAGS = -Wall -O -s -I../include ${DEFINES}
 LDFLAGS = -static 
 LIBS=-L/software/apps/prc-tools/sdks/sdk-5r3/lib/m68k-palmos-coff/ -lPalmOSGlue 
-OBJS = cocoboot.o mainform.o mem.o cpu.o imgloader.o mach.o
+OBJS = cocoboot.o mainform.o mem.o cpu.o imgloader.o mach.o options.o
 
 
 cocoboot.m68k: $(OBJS)
